--- a/theme.scss
+++ b/theme.scss
@@ -14,9 +14,10 @@ $porcelain: #dbd6c5;
 $berken: #645D4e;
 $putty: #E8d4bb;
 $coffee: #340f0f;
-$taupe: #ede6d7;
+$taupe: #fef5f0;
 $burgundy: #A70D04;
 $cinnamon: #815b41;
+
 
 
 // Base document colors
