--- a/theme.scss
+++ b/theme.scss
@@ -100,8 +100,8 @@ h3 {
 
 /* Heading 4 */
 h4 {
-  font-size: 18px;
-  font-family: $font-family;
+  font-size: 16px;
+  font-family: $font-family3;
   font-style: italic;
   font-weight: 500; 
 }
